{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 41,
  "lineage": "31f3d407-15d5-7ff1-bf1d-63634f8cb570",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048c02104aeb3cd4a",
            "association_id": "eipassoc-03d857a1a1842388a",
            "domain": "vpc",
            "id": "eipalloc-048c02104aeb3cd4a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07e74abd6077718ba",
            "private_dns": "ip-10-20-64-239.ec2.internal",
            "private_ip": "10.20.64.239",
            "public_dns": "ec2-44-223-154-230.compute-1.amazonaws.com",
            "public_ip": "44.223.154.230",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat",
              "project": "eks_demo"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:internet-gateway/igw-07efe572ad3f038b7",
            "id": "igw-07efe572ad3f038b7",
            "owner_id": "891376962587",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw",
              "project": "eks_demo"
            },
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-048c02104aeb3cd4a",
            "association_id": "eipassoc-03d857a1a1842388a",
            "connectivity_type": "public",
            "id": "nat-079b739d408a38221",
            "network_interface_id": "eni-07e74abd6077718ba",
            "private_ip": "10.20.64.239",
            "public_ip": "44.223.154.230",
            "subnet_id": "subnet-0ea9ac47381c8cfe9",
            "tags": {
              "Name": "nat"
            },
            "tags_all": {
              "Name": "nat",
              "project": "eks_demo"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:route-table/rtb-0f2b51034549ef5d5",
            "id": "rtb-0f2b51034549ef5d5",
            "owner_id": "891376962587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-079b739d408a38221",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private",
              "project": "eks_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:route-table/rtb-07af27eeadf98baaa",
            "id": "rtb-07af27eeadf98baaa",
            "owner_id": "891376962587",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07efe572ad3f038b7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public",
              "project": "eks_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bb871632c6083ad",
            "route_table_id": "rtb-0f2b51034549ef5d5",
            "subnet_id": "subnet-05ecbdd53dbbe0525"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f6ff72da054c9a1",
            "route_table_id": "rtb-0f2b51034549ef5d5",
            "subnet_id": "subnet-0fcbab0eda981ddba"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01fbda29e8e711026",
            "route_table_id": "rtb-07af27eeadf98baaa",
            "subnet_id": "subnet-0ea9ac47381c8cfe9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b05bf199dfa81526",
            "route_table_id": "rtb-07af27eeadf98baaa",
            "subnet_id": "subnet-07de15b9bd32d1393"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jjtech_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:security-group/sg-0fa70b6c398223ab4",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa70b6c398223ab4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9443
              }
            ],
            "name": "jjtech-cluster-sg",
            "name_prefix": "",
            "owner_id": "891376962587",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "k8s_tower_batch",
              "project": "eks_demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:subnet/subnet-05ecbdd53dbbe0525",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ecbdd53dbbe0525",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376962587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1a",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "eks_demo"
            },
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:subnet/subnet-0fcbab0eda981ddba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcbab0eda981ddba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891376962587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-us-east-1b",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/internal-elb": "1",
              "project": "eks_demo"
            },
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:subnet/subnet-0ea9ac47381c8cfe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ea9ac47381c8cfe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376962587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1a",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/elb": "1",
              "project": "eks_demo"
            },
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-us-east-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:subnet/subnet-07de15b9bd32d1393",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07de15b9bd32d1393",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891376962587",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-us-east-1b",
              "kubernetes.io/cluster/jjtech-demo-cluster": "owned",
              "kubernetes.io/role/elb": "1",
              "project": "eks_demo"
            },
            "vpc_id": "vpc-0fc7cffd5907778d5"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891376962587:vpc/vpc-0fc7cffd5907778d5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-05fd7b56327f31cff",
            "default_route_table_id": "rtb-02023d3cec7b224f2",
            "default_security_group_id": "sg-0af6741988d0c691a",
            "dhcp_options_id": "dopt-06a0f28475e7de195",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fc7cffd5907778d5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02023d3cec7b224f2",
            "owner_id": "891376962587",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main",
              "project": "eks_demo"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_ingress_class_v1",
      "name": "ingress_class_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "my-aws-ingress-class",
            "metadata": [
              {
                "annotations": {
                  "ingressclass.kubernetes.io/is-default-class": "true"
                },
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "my-aws-ingress-class",
                "resource_version": "691",
                "uid": "242d81ae-16be-4f9d-a949-2d974f724689"
              }
            ],
            "spec": [
              {
                "controller": "ingress.k8s.aws/alb",
                "parameters": []
              }
            ]
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eks_cluster.cluster",
            "aws_iam_openid_connect_provider.eks",
            "aws_iam_role.eks-cluster",
            "aws_iam_role_policy_attachment.amazon-eks-cluster-policy",
            "aws_security_group.jjtech_cluster",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main",
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks",
            "data.tls_certificate.eks",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.amazon_managed_service_prometheus",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.appmesh_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.appmesh_envoy_proxy",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.aws_gateway_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.cert_manager",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.cluster_autoscaler",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.ebs_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.efs_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.external_dns",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.external_secrets",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.fsx_lustre_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.karpenter_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.load_balancer_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.load_balancer_controller_targetgroup_only",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.mountpoint_s3_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.node_termination_handler",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.velero",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_policy.vpc_cni",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role.this",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.amazon_cloudwatch_observability",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.amazon_managed_service_prometheus",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.appmesh_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.appmesh_envoy_proxy",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.aws_gateway_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.cert_manager",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.cluster_autoscaler",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.ebs_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.efs_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.external_dns",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.external_secrets",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.fsx_lustre_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.karpenter_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.load_balancer_controller",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.load_balancer_controller_targetgroup_only",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.mountpoint_s3_csi",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.node_termination_handler",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.this",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.velero",
            "module.aws_load_balancer_controller_irsa_role.aws_iam_role_policy_attachment.vpc_cni",
            "module.aws_load_balancer_controller_irsa_role.data.aws_caller_identity.current",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.amazon_managed_service_prometheus",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.appmesh_controller",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.appmesh_envoy_proxy",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.aws_gateway_controller",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.cert_manager",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.cluster_autoscaler",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.ebs_csi",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.efs_csi",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.external_dns",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.external_secrets",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.fsx_lustre_csi",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.karpenter_controller",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.load_balancer_controller",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.load_balancer_controller_targetgroup_only",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.mountpoint_s3_csi",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.node_termination_handler",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.this",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.velero",
            "module.aws_load_balancer_controller_irsa_role.data.aws_iam_policy_document.vpc_cni",
            "module.aws_load_balancer_controller_irsa_role.data.aws_partition.current",
            "module.aws_load_balancer_controller_irsa_role.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "application",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "application",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "demo-app"
                },
                "name": "application",
                "resource_version": "683",
                "uid": "55f3c3f8-4646-4bcb-beda-7b952f9d49ed"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_eks_cluster.cluster",
            "aws_iam_role.eks-cluster",
            "aws_iam_role_policy_attachment.amazon-eks-cluster-policy",
            "aws_security_group.jjtech_cluster",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main",
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "aws_load_balancer_controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aws-load-balancer-controller",
            "metadata": [
              {
                "generation": 0,
                "labels": {
                  "app": "demo-app"
                },
                "name": "aws-load-balancer-controller",
                "resource_version": "682",
                "uid": "3a7d6870-fb2b-4a1c-90ac-9199a2a05a0d"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "aws_eks_cluster.cluster",
            "aws_iam_role.eks-cluster",
            "aws_iam_role_policy_attachment.amazon-eks-cluster-policy",
            "aws_security_group.jjtech_cluster",
            "aws_subnet.private-us-east-1a",
            "aws_subnet.private-us-east-1b",
            "aws_subnet.public-us-east-1a",
            "aws_subnet.public-us-east-1b",
            "aws_vpc.main",
            "data.aws_eks_cluster.eks",
            "data.aws_eks_cluster_auth.eks"
          ]
        }
      ]
    }
  ]
}